Dependencies and Plugins transferred
Transferred to parent pom

Issue: #22